fix for wrong image format on smaller displays

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -252,8 +252,6 @@ figure > img, figcaption {
     line-height: 1.3;
     margin-bottom: 1rem;
     margin-top: .3rem;
-    margin-left: 3rem;
-    margin-right: 3em;
 }
 
 audio, canvas, img, video {
